src/scss/components/landing/hero/title-area/_title-area.scss
/* _title-area.scss */

/* HeroTitleAreaContainer */

.hero-title-area {
  white-space: nowrap;
  position: absolute;
  display: flex;
  flex-flow: column nowrap;
  justify-content: flex-start;
  align-items: center;
  left: 115px;
  top: 275px;

  &__title-text {
    @include font-source-header(
      39px,
      46px,
      0.04em,
      3px,
      center,
      normal,
      bold,
      #222222
    );
    mix-blend-mode: normal;
    @include responsive-font(3vw, 32px, 39px);
  }

  &__slogan {
    text-align: right;
  }

  &__slogan-text {
    @include font-source-body(
      22px,
      28px,
      0.06em,
      3px,
      false,
      false,
      500,
      #9e9eff
    );
    @include responsive-font(1.75vw, 18px, 22px);
  }

  &__eventInfo {
    position: absolute;
    text-align: left;
    left: 0;
    // top: 152px;
    top: 194px;
  }

  &__eventInfo-text {
    @include font-source-body(
      14px,
      14px,
      0.04em,
      3px,
      false,
      false,
      false,
      #adadad
    );
    position: absolute;
    width: 22vw;
    height: 64px;
    white-space: nowrap;
    @include responsive-font(2.5vw, 13.5px, 14px);
  }

  &__button {
    position: absolute;
    display: block;
    left: 0;
    // top: 266px;
    top: 310px;
    width: 183px;
    height: 46px;

    background-color: #6f6fe8;
    box-shadow: 0 2px 6px #bfbfbf;
    border-radius: 23px;
    text-decoration: none;
    @include respond(phone) {
      top: 295px;
    }
  }

  &__button-text {
    @include font-source-body(
      14px,
      18px,
      0.07em,
      3px,
      center,
      false,
      false,
      #fffefe
    );
    text-align: center;
    @include responsive-font(2.5vw, 13.5px, 14px);
  }
}

/* Email Subscription Input Container */
div.hero-subscribe-to-email-list-container {
  // height: 46px;
  height: 45%;
  width: 100%;

  display: flex;
  flex-flow: column nowrap;
  align-items: flex-end;
  position: absolute;
  left: 0;
  top: 105px;
  text-align: center;

  input[type='email'] {
    all: unset;
    // height: 100%;
    min-width: 12em;
    border-bottom: 1px solid #adadad;
    margin-bottom: 5%;
    @include font-source-body(
      14px,
      false,
      0.04em,
      3px,
      false,
      false,
      false,
      #adadad
    );
  }

  #emailInput.placeholder-ok::placeholder {
    color: #adadad;
    @include responsive-font(1vw, 13.5px, 14px);
    font-style: oblique;
  }

  #emailInput.placeholder-error::placeholder {
    color: red;
  }

  input[type='submit'] {
    all: unset;
    // height: 100%;
    background-color: #6f6fe8;
    border-radius: 23px 23px 23px 23px;
    // padding: 0 14px 0 10px;
    padding: 8px 8px 8px 8px;
    // padding-top: 10px;
    // padding-bottom: 10px;
    box-shadow: 0 2px 6px #bfbfbf;
    // align-self: center;
    @include font-source-body(
      12px,
      18px,
      0.07em,
      3px,
      center,
      false,
      false,
      #fffefe
    );
    cursor: pointer;
    display: block;
    margin: 0 0 0 auto;
  }
}

/* NavigateToBottomContainer */

.navigate-to-bottom-container {
  position: absolute;
  left: -16px;
  // top: 362px;
  top: 394px;
  width: 66px;
  height: 66px;
  cursor: pointer;
  visibility: hidden; // while rest of landing WIP
}

.navigate-to-bottom-outer-circle {
  position: absolute;
  left: 0;
  top: 0;
}

.navigate-to-bottom-middle-circle {
  position: absolute;
  left: 11px;
  top: 11px;
}

.navigate-to-bottom-inner-circle {
  position: absolute;
  left: 21px;
  top: 21px;
}

.navigate-to-bottom-arrow {
  position: absolute;
  left: 25px;
  top: -5px;
}

